# protos

./: .gitignore  CHANGELOG.md  Dockerfile.generator  Makefile  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  buf.gen.yaml  buf.yaml  docker-compose.yml  event_store.db  event_store.db-shm  event_store.db-wal  goal.yaml  idempotency.db  legacy.db  legacy_registry.db  local.dev.txt  project.sh  pyproject.toml  requirements.txt  search_index.db  test_event_store.db-shm  test_event_store.db-wal  test_event_store_mig.db-shm  test_event_store_mig.db-wal  todo3.md  tree.txt
.taskill/: state.json
adapters/legacy_to_proto/: user_adapter.py
adapters/proto_to_legacy/: user_adapter.py
apps/desktop/: README.md
apps/mobile/: README.md
apps/web/: README.md
backend/billing-service/: README.md
docs/: contract-cross-check.md  delegation-plan.generated.json  delegation-plan.generated.md  migration-orchestrator-strategy.md  protogate-integration.md  protos-integration.md  refactor-delegation-architecture.md
gateway/: Dockerfile  delegation.py  main.py  requirements.txt  search_handler.py  sse.py  user_handler.py  ws.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  mermaid.export  project.toon.yaml  prompt.txt
protogate/: README.md  __init__.py  cli.py
scratch/: smoke_test_dual_write.py  smoke_test_search.py  swop_pipeline_service_id.py  swop_scan_c2004.py
scripts/: conflict_resolver.py  detect_migration_candidates.py  dual_writer.py  event_store.py  generate_dart.py  generate_incremental.py  generate_json_schema.py  generate_pydantic.py  generate_sql.py  generate_zod.py  idempotency_store.py  legacy_registry.py  parse_proto.py  schema_registry.py  search_index.py  vector_clock.py
testql-scenarios/: generated-api-smoke.testql.toon.yaml
tests/: conftest.py  test_analyze_service_boundaries.py  test_conflict_resolver.py  test_dart_generator.py  test_delegation_plan.py  test_delegation_registry.py  test_detect_cqrs_pattern_clusters.py  test_detect_migration_candidates.py  test_diff_engine.py  test_dual_write.py  test_event_store.py  test_generate_migration_wave_plan.py  test_generators.py  test_incremental.py  test_legacy_registry.py  test_migrator.py  test_protogate_cli.py  test_report_rendering.py  test_run_arch_migration_discovery.py  test_schema_registry.py  test_typescript_codegen.py
(+65 files in other folders)
