[build-system]
requires = ["setuptools>=82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protogate"
version = "0.1.11"
description = "Migration tool and delegation platform for extracting bounded slices from legacy systems"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    {name = "semcod", email = "info@semcod.io"},
    {name = "Tom Sapletta", email = "tom@sapletta.com"},
]
keywords = ["protobuf", "migration", "delegation", "cqrs", "event-sourcing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "protobuf>=4.25.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[project.optional-dependencies]
gateway = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.46.0",
    "sse-starlette>=3.3.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "black>=26.0.0",
    "ruff>=0.15.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[project.scripts]
protogate = "protogate.cli:main"

[project.urls]
Homepage = "https://github.com/semcod/protogate"
Repository = "https://github.com/semcod/protogate"
Documentation = "https://github.com/semcod/protogate/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["protogate*"]

[tool.setuptools.package-data]
protogate = ["py.typed"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
